refactor: 중복 기능 통일 및 순서 정리